# synapse-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  coverage_detailed.xml  docker-compose.yml  entrypoint.sh  locustfile.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  windows-requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cache/prophet/forecasts/: SKU_100_2062f53d9972965b43cbf97c9725f0e87ae016025bf24de6dfa893754d6367cb_365.pkl  SKU_101_ad9c1c6dba4b2cd1c16e88b75e4ab3ecc491b064518070e7da833291188ba8df_365.pkl  SKU_102_b601ee8b836f697eb0b858a4b80a93110b20cf171eb1cc3ba4a8cda8ce3ee7d6_365.pkl  SKU_104_4f4794fa059bb82cb279a8fc685aa897b340c79708c3e112d002c175736b5b3a_365.pkl  SKU_106_df6a36544f4ee8026e066de268f498b27bd80eb8e696a0f1e336bcab0e8b0034_365.pkl  (+302 more)
monitoring/prometheus/: prometheus.yml
src/: logger_instance.py  main.py  prophet_cache.py  settings.py  synapse_logger.py
src/auth/: auth_utils.py
src/database/: get_db.py  models.py  redis.py
src/enums/: notification_type.py
src/managers/: websocket.py
src/modules/: chat.py  data_loader.py  email_builder.py  example.py  nlp.py  notification.py  password_reset.py  report.py  report_scheduler.py  root.py  user.py  websocket.py
src/nlp/: extract_data_nl.py  forecast_service.py  intent.py  intent_classifier.py  prophet_forecast.py  response_generator.py  sql_query_builder.py  sql_utils.py
src/routers/: auth.py  chat.py  middleware.py  notification.py  report.py  user.py  websocket.py
src/schemas/: auth.py  basic_response.py  chat.py  example.py  report.py  user.py
src/tests/: conftest.py  test_example.py  test_intent.py  test_performance.py  test_report.py
src/tests/modules/: test_login.py  (+2 more)
utils/: clientes.csv  load_synapse_data.sh  setup_tables.sql  synapse_backup.dump
(+309 files in other folders)
